--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
 
     <!-- loader start -->
 
-    <!-- <div class="loader">
+    <div class="loader">
         <img src="./Images/loading.gif" alt="">
-    </div> -->
+    </div>
 
     <!-- contact section start -->
 
