--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     
                 <div class="project">
                     <h2>RandomColor</h2>
-                    <p>I made this project according to a layout from FrontendMentor website. HTML, CSS and vanila javascript has been used. The concept is of a website of a photography agency.</p>
+                    <p>This is a simple project to showcase my skills with vanilla javascript. The user can general a random color with the color code each time clicks on the button. I didn't pay much attention to more functionality </p>
                     <div class="btn-box">
                         <a href="https://koraad.github.io/random-color/" target="_blank">
                             <button class="btn">live view</button>
@@ -492,7 +492,7 @@
     
                 <div class="project">
                     <h2>SnapWorld</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos error praesentium nemo alias magni enim eveniet perferendis repellat! Fugit aliquid laudantium eum harum laboriosam repellat rerum nemo non adipisci perspiciatis!</p>
+                    <p>I made this project according to a layout from FrontendMentor website. HTML, CSS and vanila javascript has been used. The concept is of a website of a photography agency.</p>
                     <div class="btn-box">
                         <a href="https://koraad.github.io/snapworld/" target="_blank">
                             <button class="btn">live view</button>
