--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     </div>
                 </div>
 
-                <a href="../Images/Resume Pasindu.pdf" download="Resume - Don Pasindu">
+                <a href="../Images/Resume Pasindu.pdf" download="Don Pasindu">
                     <button class="btn" >download cv</button>
                 </a>
                 
