--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
         <div class="skills-right">
             <div class="container">
-                <h3>I have various amazing skills, following are some them you need </h3>
+                <h3>I have various amazing skills, following are some of them you might need</h3>
 
                 <p>I am pretty comfortable with HTML, CSS, and javascript, and making nice responsive deisgn layouts. I recently started learning React too. My other focuses will be learning Bootstrao and Sass. </p>
                 <div class="skills-icons">
