--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- sticky social icons -->
 
-    <div class="sticky-social">
+    <div class="sticky-social hide">
         <a href="https://www.linkedin.com/in/pasindu-korottage-610263223/" target="blank">
             <div class="background">
                 <i class="fa-brands fa-linkedin"></i>
@@ -106,7 +106,7 @@
         <div class="home-content">
             <h1><span class="typing"></span></h1>
             <p>A Frontend focused Web Developer building the Frontend of Websites and Web Applications that leads to the success of the overall product</p>
-            <button class="btn"><a href="#projects">Projects</a></button>
+            <a href="#projects"><button class="btn">Projects</button></a>
         </div>
         <div class="dropdown">
             <a href="#about"><i class="bi bi-chevron-compact-down"></i></a>
