--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 
     <!-- video open -->
 
-<!--     <div class="video-banner">
+    <!-- <div class="video-banner">
         <div class="video-overlay">
 
         </div>
@@ -602,7 +602,7 @@
             <h2>with koraad</h2>
         </div>
         
-    </div>
+    </div> -->
     <!-- video popup -->
 
     <div class="video">
@@ -613,7 +613,7 @@
 
         </iframe>
     </div>
-     -->
+    
 
     <!-- contact section start -->
 
