--- a/index.html
+++ b/index.html
@@ -605,14 +605,14 @@
     </div> -->
     <!-- video popup -->
 
-    <div class="video">
+    <!-- <div class="video">
 
         <i class="fa-solid fa-xmark" id="video-close"></i>
 
         <iframe width="60%" height="70%" src="https://www.youtube.com/embed/1wkPMUZ9vX4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" >
 
         </iframe>
-    </div>
+    </div> -->
     
 
     <!-- contact section start -->
