--- a/index.html
+++ b/index.html
@@ -549,11 +549,11 @@
                 <img src="./Images/project.png" alt="">
     
                 <div class="project">
-                    <h2>PythonProject</h2>
-                    <p>This simple Python project shows my basic skills in Python. The user can add student marks of subjects and see their grades whether passed or fail. Data is saved using file handling methods. </p>
+                    <h2>IELTS Website</h2>
+                    <p>This static website is made out of WordPress to showcase my wordpress skills, and I made it for my aunt who is an IELTS tutor. </p>
                     <div class="btn-box">
-                    <a href="https://github.com/koraad/python-project.git" target="_blank">
-                        <button class="btn">Source</button>
+                    <a href="https://buddhini-ielts.ga/" target="_blank">
+                        <button class="btn">live view</button>
                     </a>
               
                     </div>
