--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                             <i class="bi bi-filetype-py"></i>
                         </div>
 
-                        <p>PYTHON BASICS</p>
+                        <p>WordPress</p>
                     </div>
                     
                     <div class="skills">
