--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#services">Services</a></li>
-                
                 <li><a href="#speciality">speciality</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -247,19 +246,27 @@
 
                         <p>REACT JS</p>
                     </div>
-                    <div class="skills">
-                        <div class="icon">
-                            <i class="bi bi-music-note-list"></i>
-                        </div>
-
-                        <p>GUITAR & SINGING</p>
-                    </div>
+                    
                     <div class="skills">
                         <div class="icon">
                             <i class="bi bi-facebook"></i>
                         </div>
 
                         <p>FACEBOOK ADS</p>
+                    </div>
+                    <div class="skills">
+                        <div class="icon">
+                            <i class="bi bi-c-circle"></i>
+                        </div>
+
+                        <p>CANVA</p>
+                    </div>
+                    <div class="skills">
+                        <div class="icon">
+                            <i class="bi bi-music-note-list"></i>
+                        </div>
+
+                        <p>GUITAR & SINGING</p>
                     </div>
                 </div>
 
