--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <div class="container">
                 <h3>I have various amazing skills, following are some them you need </h3>
 
-                <p>I am pretty comfortable with HTML, CSS, and javascript, and making nice responsive deisgn layouts. I recently started learning React too. My other focuses will be learning Bootstrap and Sass. </p>
+                <p>I am pretty comfortable with HTML, CSS, and javascript and, and making creative and responsive deisgn layouts. I recently started learning ReactJs too(still not an expert though). My other focuses will be learning Bootstrap, Sass and custom WordPress theme development. </p>
                 <div class="skills-icons">
                     <div class="skills">
                         <div class="icon">
