--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- sticky social icons -->
 
     <div class="sticky-social hide">
-        <a href="https://www.linkedin.com/in/pasindu-korottage-610263223/" target="blank">
+        <a href="https://www.linkedin.com/in/don-pasindu-610263223/" target="blank">
             <div class="background">
                 <i class="fa-brands fa-linkedin"></i>
             </div>
@@ -96,7 +96,7 @@
                 <i class="fa-brands fa-facebook"></i>
             </div>
         </a>
-        <a href="https://www.linkedin.com/in/pasindu-korottage-610263223/" target="blank">
+        <a href="https://twitter.com/PKorottage" target="blank">
             <div class="background">
                 <i class="fa-brands fa-twitter"></i>
             </div>
