--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
     
                 <div class="project">
                     <h2>IELTS Website</h2>
-                    <p>This static website is made out of WordPress to showcase my wordpress skills, and I made it for my aunt who is an IELTS tutor. </p>
+                    <p>This static website is made out of WordPress to showcase my wordpress skills, and I made it for my aunt who is an IELTS tutor. I used Elementor, Astra theme and Starter Templates for this project.</p>
                     <div class="btn-box">
                     <a href="https://buddhini-ielts.ga/" target="_blank">
                         <button class="btn">live view</button>
