--- a/index.html
+++ b/index.html
@@ -229,7 +229,21 @@
                             <i class="bi bi-filetype-js"></i>
                         </div>
 
-                        <p>JAVASCRIPT</p>
+                        <p>Javascript</p>
+                    </div>
+                    <div class="skills">
+                        <div class="icon">
+                            <i class="bi bi-filetype-java"></i>
+                        </div>
+
+                        <p>Java</p>
+                    </div>
+                    <div class="skills">
+                        <div class="icon">
+                            <i class="bi bi-braces"></i>
+                        </div>
+
+                        <p>OOP</p>
                     </div>
                     <div class="skills">
                         <div class="icon">
@@ -244,7 +258,14 @@
                             <i class="bi bi-filetype-jsx"></i>
                         </div>
 
-                        <p>REACT JS</p>
+                        <p>REACT JS Basics</p>
+                    </div>
+                    <div class="skills">
+                        <div class="icon">
+                            <i class="bi bi-filetype-py"></i>
+                        </div>
+
+                        <p>Python Basics</p>
                     </div>
                     
                     <div class="skills">
@@ -260,13 +281,6 @@
                         </div>
 
                         <p>CANVA</p>
-                    </div>
-                    <div class="skills">
-                        <div class="icon">
-                            <i class="bi bi-music-note-list"></i>
-                        </div>
-
-                        <p>GUITAR & SINGING</p>
                     </div>
                 </div>
 
@@ -292,7 +306,7 @@
                 <span>1</span>
                 <div class="text-content">
                     <h1>Precise</h1>
-                    <p>I will your project exactly as you requested, precise to the last letter.</p>
+                    <p>I will build your project exactly as you requested, precise to the last letter.</p>
                     <a href="#speciality">
                         <div class="btn-box">
                             <div class="bullet-div"></div>
