--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                     </div>
                 </div>
 
-                <a href="./Images/Pasindu Resume.pdf" target="_blank">
+                <a href="./Images/New Resume.pdf" target="_blank">
                     <button class="btn" >download cv</button>
                 </a>
                 
