--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
     
                 <div class="project">
                     <h2>Insta Pages</h2>
-                    <p>Following business Instagram pages were created and managed by myself for my past e-commerce brands with Shopify. ALl of the content seen here were created by me. </p>
+                    <p>Following business Instagram pages were created and managed by myself for my past e-commerce brands with Shopify. All of the content seen here were created by myself alone, using Photoshop, Canva and ezgif</p>
                     <div class="btn-box">
                         <a href="https://www.instagram.com/stylishextras/" target="_blank">
                             <button class="btn">Stlish Extras</button>
